Chore: .vs, bin, obj added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /EconomicManagementAPP/appsettings.Development.json
 /EconomicManagementAPP/.env
+/.vs
+/EconomicManagementAPP/obj
+/EconomicManagementAPP/bin
+/EconomicManagementAPP/.vs
