--- a/EconomicManagementAPP/appsettings.Development.json
+++ b/EconomicManagementAPP/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=EconomicManagementDB;User ID=sa;Password=systemadmin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=192.168.128.1;Initial Catalog=EconomicManagementDB;User ID=sa;Password=Jjoossee9.9;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
