--- a/EconomicManagementAPP/appsettings.json
+++ b/EconomicManagementAPP/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PA81D2C;Database=EconomicManagementDB;Integrated Security=False;User ID=sa;Password=12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
