--- a/EconomicManagementAPP/appsettings.json
+++ b/EconomicManagementAPP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PA81D2C;Database=EconomicManagementDB;Integrated Security=False;User ID=sa;Password=12345"
+    "DefaultConnection": "Server=JOHNSIESAPC\\LOCAL;Database=EconomicManagementDB;Integrated Security=False;User ID=sa;Password=Sa123456"
   },
   "Logging": {
     "LogLevel": {
